--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- <meta property="og:image" content="https://example.edu/roboracer/og-image.jpg" /> -->
 
   <!-- Favicon (replace as needed) -->
-  <!-- <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='64' height='64'%3E%3Ccircle cx='32' cy='32' r='30' fill='%230ea5e9'/%3E%3Cpath d='M18 34h28a8 8 0 0 0 0-16H18a8 8 0 0 0 0 16zm0 0v8m28-8v8' stroke='white' stroke-width='4' fill='none'/%3E%3C/svg%3E" /> -->
+  <link rel="icon" href="https://avatars.githubusercontent.com/u/230216535?s=48&v=4' width='64' height='64'%3E%3Ccircle cx='32' cy='32' r='30' fill='%230ea5e9'/%3E%3Cpath d='M18 34h28a8 8 0 0 0 0-16H18a8 8 0 0 0 0 16zm0 0v8m28-8v8' stroke='white' stroke-width='4' fill='none'/%3E%3C/svg%3E" />
 
   <!-- JSON-LD -->
   <!-- <script type="application/ld+json">
